--- a/cypressCucumberDemo/package.json
+++ b/cypressCucumberDemo/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "cypress:runner": "cypress open --e2e --browser chrome",
-    "cypress:execution": "cypress run --spec cypress/e2e/features/*",
-    "cypress:execution-allure": "cypress run --headed --env allure=true",
+    "cypress:execution": "cypress run --browser chrome --spec cypress/e2e/features/*",
+    "cypress:execution-allure": "cypress run --headed --browser chrome --env allure=true",
     "allure:report": "allure generate allure-results --clean -o allure-report; allure open  allure-report"
   },
   "keywords": [
